--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="txt_login">Login</string>
     <string name="txt_remember_me">Remember Me</string>
     <string name="error_login">Login Failed!</string>
+    <string name="error_wrong_pass">Wrong Password!</string>
 </resources>
